Replaced the obsoleted method to convert a double value to the Double object.